Added high/low price and ma crossover alerts
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@573 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.trading/plugin.xml
+++ b/net.sourceforge.eclipsetrader.trading/plugin.xml
@@ -417,6 +417,22 @@
                class="net.sourceforge.eclipsetrader.trading.alerts.PriceChangePreferences"
                name="General"/>
       </alert>
+      <alert
+            class="net.sourceforge.eclipsetrader.trading.alerts.PriceAlert"
+            id="net.sourceforge.eclipsetrader.alert.pricealert"
+            name="Price Alert">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.trading.alerts.PriceAlertPreferences"
+               name="General"/>
+      </alert>
+      <alert
+            class="net.sourceforge.eclipsetrader.trading.alerts.MovingAverageCrossover"
+            id="net.sourceforge.eclipsetrader.alert.macrossover"
+            name="Moving Average Crossover">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.trading.alerts.MovingAverageCrossoverPreferences"
+               name="General"/>
+      </alert>
    </extension>
 
 </plugin>
