Added settings to update history data and news heads on startup
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@574 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -119,6 +119,10 @@
       </viewerContribution>
    </extension>
    <extension
+         point="org.eclipse.ui.startup">
+      <startup class="net.sourceforge.eclipsetrader.charts.internal.EarlyStartup"/>
+   </extension>
+   <extension
          point="org.eclipse.ui.themes">
       <themeElementCategory
             id="net.sourceforge.eclipsetrader.charts"
