Added progress view
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@575 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -95,5 +95,13 @@
             id="net.sourceforge.eclipsetrader.startupAndShutdown"
             name="Startup and Shutdown"/>
    </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <view
+            class="org.eclipse.ui.ExtensionFactory:progressView"
+            icon="icons/eview16/pview.gif"
+            id="org.eclipse.ui.views.ProgressView"
+            name="Progress View"/>
+   </extension>
 
 </plugin>
