Added currency exchange view's icon
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@579 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -108,6 +108,7 @@
       <view
             category="net.sourceforge.eclipsetrader"
             class="net.sourceforge.eclipsetrader.core.ui.views.CurrencyExchangeView"
+            icon="icons/eview16/money.png"
             id="net.sourceforge.eclipsetrader.views.currencies"
             name="Currencies"/>
       <view
