Added VFI and VIDYA indicators
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@592 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/plugin.xml
+++ b/net.sourceforge.eclipsetrader.charts/plugin.xml
@@ -432,6 +432,22 @@
                class="net.sourceforge.eclipsetrader.charts.indicators.ROCPreferencePage"
                title="Rate Of Change"/>
       </indicator>
+      <indicator
+            class="net.sourceforge.eclipsetrader.charts.indicators.VIDYA"
+            id="net.sourceforge.eclipsetrader.indicators.vidya"
+            name="Tushar Chande's Vidya - VIDYA">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.charts.indicators.VIDYAPreferencePage"
+               title="Tushar Chande's Vidya"/>
+      </indicator>
+      <indicator
+            class="net.sourceforge.eclipsetrader.charts.indicators.VFI"
+            id="net.sourceforge.eclipsetrader.indicators.vfi"
+            name="Volume Flow Indicator - VFI">
+         <preferencePage
+               class="net.sourceforge.eclipsetrader.charts.indicators.VFIPreferencePage"
+               title="Volume Flow Indicator"/>
+      </indicator>
    </extension>
    <extension
          point="net.sourceforge.eclipsetrader.charts.objects">
