--- a/net.sourceforge.eclipsetrader.news/plugin.xml
+++ b/net.sourceforge.eclipsetrader.news/plugin.xml
@@ -105,7 +105,7 @@
                enablesFor="1"
                id="net.sourceforge.eclipsetrader.news.showNews"
                label="%ShowNewsAction.label"
-               menubarPath="group2"
+               menubarPath="additions"
                style="push"/>
       </viewerContribution>
    </extension>
@@ -230,7 +230,7 @@
                enablesFor="1"
                id="net.sourceforge.eclipsetrader.news.showNews"
                label="Show News"
-               menubarPath="group2"
+               menubarPath="additions"
                style="push"/>
       </viewContribution>
    </extension>
