Updated menu layout
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@652 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.news/plugin.xml
+++ b/net.sourceforge.eclipsetrader.news/plugin.xml
@@ -94,7 +94,7 @@
                enablesFor="1"
                id="net.sourceforge.eclipsetrader.news.showNews"
                label="%ShowNewsAction.label"
-               menubarPath="group2"
+               menubarPath="additions"
                style="push"/>
       </viewerContribution>
       <viewerContribution
