--- a/net.sourceforge.eclipsetrader.charts/build.properties
+++ b/net.sourceforge.eclipsetrader.charts/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                epl-v10.html,\
                plugin.xml,\
                schema/,\
-               icons/
+               icons/,\
+               plugin.properties
