Added the appearance preference page and moved colors and fonts under appearance
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@658 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader/plugin.xml
+++ b/net.sourceforge.eclipsetrader/plugin.xml
@@ -85,7 +85,11 @@
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
-            category="net.sourceforge.eclipsetrader"
+            class="org.eclipse.ui.ExtensionFactory:appearancePreferencePage"
+            id="org.eclipse.ui.preferencePages.Appearance"
+            name="Appearance"/>
+      <page
+            category="org.eclipse.ui.preferencePages.Appearance"
             class="org.eclipse.ui.ExtensionFactory:colorsAndFontsPreferencePage"
             id="org.eclipse.ui.preferencePages.ColorsAndFonts"
             name="Colors and Fonts"/>
