Added accountProviders extension point and changes to the account structure to allow subclasses
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@662 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/plugin.xml
+++ b/net.sourceforge.eclipsetrader.core/plugin.xml
@@ -4,6 +4,7 @@
    <extension-point id="feeds" name="Security Feed" schema="schema/feeds.exsd"/>
    <extension-point id="news" name="News Provider" schema="schema/news.exsd"/>
    <extension-point id="patterns" name="Price Pattern" schema="schema/patterns.exsd"/>
+   <extension-point id="accountProviders" name="Account Providers" schema="schema/accountProviders.exsd"/>
    <extension
          point="org.eclipse.ui.actionSets">
       <actionSet
